# openglossa

./: .gitignore  .vercelignore  ATTRIBUTIONS.md  LICENSE  LICENSE-DATA  LICENSING.md  Makefile  NOTICE  OpenGlossa_Fiche-Projet_v0.1.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/: RELEASE_NOTES_v0.1.0.md
api/: _index.html  index.py  tm.jsonl
eval/: README.md  run_eval.py  term_hit_rate.py
eval/data/: gold.jsonl
eval/results/: baseline.json
public/: app.js  corpus.js  i18n.js  index.html  styles.css
public/data/: corpus_stats.json
public/downloads/: glossary_deepl_de-fr.csv  openglossa_demo.tmx
public/downloads/schemas/: term_candidate.schema.json  translation_unit.schema.json
schemas/: term_record.schema.json
schemas/dtd/: tbx_openglossa.dtd
src/openglossa/: __init__.py  __main__.py  cli.py  schemas.py
src/openglossa/align/: __init__.py  eli_structural.py
src/openglossa/export/: __init__.py  deepl_csv.py  jsonl.py  parquet.py  tbx.py  tmx.py  validate.py
src/openglossa/mcp/: __init__.py  server.py
src/openglossa/mining/: __init__.py  extract.py
src/openglossa/search/: __init__.py  vector.py
src/openglossa/sources/: __init__.py  akn.py  eurlex.py  fedlex.py  iate.py  jurivoc.py  slds.py  termdat.py
tests/: conftest.py  test_akn_align.py  test_eurlex.py  test_eval.py  test_export_roundtrip.py  test_exports.py  test_fedlex.py  test_iate.py  test_licensing.py  test_mcp.py  test_mining.py  test_schemas.py  test_slds.py  test_termdat.py  test_vector_index.py
web/: index.html  styles.css
web/data/: tm_demo.json
